Expand Part C: 2×5=10 strategies with AttentionXML and LightXML across all loss functions
- Add AttentionXML (NeurIPS 2019): Multi-label attention mechanism
- Add LightXML (AAAI 2021): Two-stage with dynamic negative sampling
- Integrate with both loss functions: Weighted BCE and Focal Loss γ=5
- New strategy matrix: 2 loss × 5 methods = 10 combinations
  * C-1 to C-5: Weighted BCE with Chain/ExtraTrees/RandomForest/AttentionXML/LightXML
  * C-6 to C-10: Focal γ=5 with Chain/ExtraTrees/RandomForest/AttentionXML/LightXML
- Add src/attention_xml.py: Simplified AttentionXML for 499 labels
- Add src/light_xml.py: Simplified LightXML with label grouping
- Add src/xml_utils.py: Training/evaluation utilities for XMC methods
- Update Part C header: Comprehensive testing of all combinations
- Total time estimate: ~7.5-10 hours (10 strategies × 45-60 min each)

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -1160,22 +1160,50 @@
     "import ast\n",
     "train_labels_raw = train_df['labels'].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) else x).tolist()\n",
     "\n",
+    "# Calculate label frequencies\n",
+    "from collections import Counter\n",
+    "label_counter = Counter()\n",
+    "for labels in train_labels_raw:\n",
+    "    label_counter.update(labels)\n",
+    "\n",
+    "# Identify tail TTPs (frequency < 10)\n",
+    "tail_threshold = 10\n",
+    "tail_ttps = {label for label, count in label_counter.items() if count < tail_threshold}\n",
+    "print(f\"📊 Tail TTPs detected: {len(tail_ttps)} (frequency < {tail_threshold})\")\n",
+    "\n",
     "# Get training texts\n",
     "train_texts = train_df[text_column].fillna('').tolist()\n",
     "\n",
     "print(f\"🔄 Applying COMBINED augmentation...\")\n",
-    "print(f\"   - IoC Replacement (100%)\")\n",
-    "print(f\"   - Back-translation (15%)\")\n",
+    "print(f\"   - IoC Replacement\")\n",
+    "print(f\"   - Back-translation (15% probability)\")\n",
     "print(f\"   - Tail Oversampling (3x-10x)\")\n",
     "\n",
     "# Apply combined augmentation\n",
-    "augmented_texts, augmented_labels = augment_tail_samples(\n",
-    "    texts=train_texts,\n",
-    "    labels=train_labels_raw,\n",
-    "    ioc_replacement_prob=1.0,      # Always replace IoCs\n",
-    "    back_translation_prob=0.15,     # 15% back-translation\n",
-    "    oversample_factor_range=(3, 10) # 3x-10x oversampling\n",
-    ")\n",
+    "augmented_texts = train_texts.copy()\n",
+    "augmented_labels = train_labels_raw.copy()\n",
+    "\n",
+    "for idx, labels in enumerate(train_labels_raw):\n",
+    "    # Check if sample has tail TTPs\n",
+    "    if any(label in tail_ttps for label in labels):\n",
+    "        # Calculate oversample factor based on min frequency\n",
+    "        min_freq = min([label_counter[label] for label in labels if label in tail_ttps])\n",
+    "        oversample_factor = max(3, min(10, 100 // min_freq))  # 3x-10x based on frequency\n",
+    "        \n",
+    "        # Oversample with augmentation\n",
+    "        for _ in range(oversample_factor - 1):  # -1 because original is already in list\n",
+    "            augmented_text = train_texts[idx]\n",
+    "            \n",
+    "            # Apply IoC replacement\n",
+    "            augmented_text = replace_iocs(augmented_text)\n",
+    "            \n",
+    "            # Apply back-translation with 15% probability\n",
+    "            import random\n",
+    "            if random.random() < 0.15:\n",
+    "                augmented_text = back_translate(augmented_text, device=BASE_CONFIG['device'])\n",
+    "            \n",
+    "            augmented_texts.append(augmented_text)\n",
+    "            augmented_labels.append(labels)\n",
     "\n",
     "print(f\"\\nOriginal samples: {len(train_texts)}\")\n",
     "print(f\"Augmented samples: {len(augmented_texts)}\")\n",
@@ -2274,34 +2302,40 @@
     "\n",
     "**Not:** Bu bölümü PART A ve B'den SONRA çalıştırın!\n",
     "\n",
-    "**Focused Testing:** 2 Loss Functions × 3 Classification Methods = **6 Kombinasyon**\n",
+    "**Comprehensive Testing:** 2 Loss × 5 Methods = **10 Strateji**\n",
     "\n",
-    "Bu bölüm **en umut verici kombinasyonları** test eder:\n",
+    "Bu bölüm **tüm loss fonksiyonlarını tüm classification yöntemleriyle** test eder:\n",
     "\n",
-    "### Loss Functions (Önceki deneylerden seçildi):\n",
+    "### Loss Functions (Part B'den seçildi):\n",
     "1. **Weighted BCE** - Frequency-based weights (pos_weight) - En başarılı baseline\n",
     "2. **Focal Loss γ=5** - Strong hard example focusing - En güçlü focal loss\n",
     "\n",
-    "### Classification Methods (En etkili 3 yöntem):\n",
+    "### Classification Methods (5 yöntem):\n",
     "1. **ClassifierChain** - Label dependencies (sequential) - Label ilişkileri için\n",
     "2. **ExtraTreesClassifier** - Extremely randomized trees - Hız ve çeşitlilik için\n",
     "3. **RandomForestClassifier** - Ensemble of decision trees - Yüksek doğruluk için\n",
+    "4. **AttentionXML** (NeurIPS 2019) - Multi-label attention mechanism\n",
+    "5. **LightXML** (AAAI 2021) - Dynamic negative sampling + label embeddings\n",
     "\n",
     "### Strategy Matrix:\n",
     "```\n",
-    "                    ClassifierChain  ExtraTrees   RandomForest\n",
-    "Weighted BCE        Strategy C-1     Strategy C-2 Strategy C-3\n",
-    "Focal γ=5           Strategy C-4     Strategy C-5 Strategy C-6\n",
+    "                    Chain  ExtraTrees  RandomForest  AttentionXML  LightXML\n",
+    "Weighted BCE        C-1    C-2         C-3           C-4           C-5\n",
+    "Focal Loss γ=5      C-6    C-7         C-8           C-9           C-10\n",
     "```\n",
     "\n",
-    "**RandomForest vs ExtraTrees:**\n",
-    "- **RandomForest**: Optimal split selection → slightly better accuracy, slower\n",
-    "- **ExtraTrees**: Random split selection → faster, more diverse, less overfitting\n",
-    "- Both: class_weight='balanced', n_jobs=-1 (parallel training)\n",
+    "**Method Özellikleri:**\n",
+    "- **ClassifierChain**: Sequential label modeling, captures dependencies\n",
+    "- **ExtraTrees**: Faster, more diverse, less overfitting (random splits)\n",
+    "- **RandomForest**: Optimal splits, slightly better accuracy\n",
+    "- **AttentionXML**: Her label için özel attention weights → label-specific features\n",
+    "- **LightXML**: Two-stage ranking + dynamic negative sampling → efficiency\n",
     "\n",
-    "**Not:** MultiOutputClassifier çıkarıldı (en temel yöntem, diğerleri daha etkili)\n",
+    "**Loss Function Etkisi:**\n",
+    "- **Weighted BCE**: Standard approach, class imbalance için weights\n",
+    "- **Focal Loss γ=5**: Hard examples'a odaklanır, tail TTPs için potansiyel iyileştirme\n",
     "\n",
-    "**Toplam Süre:** ~4.5-6 saat (her kombinasyon ~45-60 dakika)\n",
+    "**Toplam Süre:** ~7.5-10 saat (10 strateji, ~45-60 dakika each)\n",
     "\n",
     "**Kullanım:** Aşağıdaki hücreyi çalıştırarak tüm kombinasyonları otomatik olarak test edin."
    ]
@@ -2350,7 +2384,7 @@
     "    'focal_gamma': 5.0\n",
     "})\n",
     "\n",
-    "# Define classification methods (3 most effective techniques)\n",
+    "# Define classification methods (5 methods: 3 traditional + 2 XMC)\n",
     "classification_methods = [\n",
     "    {\n",
     "        'name': 'classifier_chain',\n",
@@ -2372,6 +2406,20 @@
     "        'base_estimator': 'random_forest',\n",
     "        'train_func': train_multi_output_classifier,  # Uses MultiOutputClassifier with RandomForest\n",
     "        'eval_func': evaluate_multi_output_classifier\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'attentionxml',\n",
+    "        'display_name': 'AttentionXML',\n",
+    "        'base_estimator': 'attention_xml',\n",
+    "        'train_func': 'attention_xml',  # Special marker\n",
+    "        'eval_func': 'attention_xml'\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'lightxml',\n",
+    "        'display_name': 'LightXML',\n",
+    "        'base_estimator': 'light_xml',\n",
+    "        'train_func': 'light_xml',  # Special marker\n",
+    "        'eval_func': 'light_xml'\n",
     "    }\n",
     "]\n",
     "\n",
@@ -2393,7 +2441,7 @@
     "        print(f\"🧪 PART C STRATEGY {strategy_counter}: {loss_config['display_name']} + {clf_method['display_name']}\")\n",
     "        print(f\"{'='*80}\\n\")\n",
     "        \n",
-    "        # STEP 1: Train BERT with specific loss function\n",
+    "        # STEP 1: Configuration\n",
     "        print(f\"📋 Configuration:\")\n",
     "        print(f\"   Loss Function: {loss_config['display_name']}\")\n",
     "        print(f\"   Classification Method: {clf_method['display_name']}\")\n",
@@ -2404,65 +2452,137 @@
     "            print(f\"   Focal Alpha: {loss_config['focal_alpha']}\")\n",
     "            print(f\"   Focal Gamma: {loss_config['focal_gamma']}\")\n",
     "        \n",
-    "        # Load and train BERT model\n",
-    "        print(f\"\\n🔧 Step 1/3: Training BERT with {loss_config['display_name']}...\")\n",
-    "        bert_model = load_model(\n",
-    "            model_name=BASE_CONFIG['model_name'],\n",
-    "            num_labels=num_labels,\n",
-    "            device=BASE_CONFIG['device'],\n",
-    "            use_focal_loss=loss_config['use_focal_loss'],\n",
-    "            focal_alpha=loss_config['focal_alpha'],\n",
-    "            focal_gamma=loss_config['focal_gamma'],\n",
-    "            pos_weight=loss_config['pos_weight']\n",
-    "        )\n",
+    "        # Check if this is AttentionXML or LightXML (end-to-end training)\n",
+    "        if clf_method['name'] in ['attentionxml', 'lightxml']:\n",
+    "            # Import XML utilities\n",
+    "            from src.xml_utils import train_attention_xml, evaluate_attention_xml\n",
+    "            from src.xml_utils import train_light_xml, evaluate_light_xml\n",
+    "            \n",
+    "            if clf_method['name'] == 'attentionxml':\n",
+    "                from src.attention_xml import load_attention_xml_model\n",
+    "                \n",
+    "                print(f\"\\n🔧 Training {clf_method['display_name']} (end-to-end with {loss_config['display_name']})...\")\n",
+    "                model = load_attention_xml_model(\n",
+    "                    model_name=BASE_CONFIG['model_name'],\n",
+    "                    num_labels=num_labels,\n",
+    "                    device=BASE_CONFIG['device'],\n",
+    "                    dropout=0.1\n",
+    "                )\n",
+    "                \n",
+    "                training_history = train_attention_xml(\n",
+    "                    model=model,\n",
+    "                    train_dataloader=train_dataloader,\n",
+    "                    num_epochs=BASE_CONFIG['num_epochs'],\n",
+    "                    learning_rate=BASE_CONFIG['learning_rate'],\n",
+    "                    device=BASE_CONFIG['device'],\n",
+    "                    use_focal_loss=loss_config['use_focal_loss'],\n",
+    "                    pos_weight=loss_config['pos_weight'],\n",
+    "                    focal_alpha=loss_config['focal_alpha'],\n",
+    "                    focal_gamma=loss_config['focal_gamma']\n",
+    "                )\n",
+    "                \n",
+    "                print(f\"\\n📊 Evaluating...\")\n",
+    "                test_results = evaluate_attention_xml(\n",
+    "                    model=model,\n",
+    "                    test_dataloader=test_dataloader,\n",
+    "                    device=BASE_CONFIG['device'],\n",
+    "                    label_names=label_names\n",
+    "                )\n",
+    "                \n",
+    "            else:  # lightxml\n",
+    "                from src.light_xml import load_light_xml_model\n",
+    "                \n",
+    "                print(f\"\\n🔧 Training {clf_method['display_name']} (end-to-end with {loss_config['display_name']})...\")\n",
+    "                model = load_light_xml_model(\n",
+    "                    model_name=BASE_CONFIG['model_name'],\n",
+    "                    num_labels=num_labels,\n",
+    "                    device=BASE_CONFIG['device'],\n",
+    "                    num_label_groups=50,\n",
+    "                    label_emb_dim=128,\n",
+    "                    dropout=0.1\n",
+    "                )\n",
+    "                \n",
+    "                training_history = train_light_xml(\n",
+    "                    model=model,\n",
+    "                    train_dataloader=train_dataloader,\n",
+    "                    num_epochs=BASE_CONFIG['num_epochs'],\n",
+    "                    learning_rate=BASE_CONFIG['learning_rate'],\n",
+    "                    device=BASE_CONFIG['device'],\n",
+    "                    use_focal_loss=loss_config['use_focal_loss'],\n",
+    "                    pos_weight=loss_config['pos_weight'],\n",
+    "                    focal_alpha=loss_config['focal_alpha'],\n",
+    "                    focal_gamma=loss_config['focal_gamma']\n",
+    "                )\n",
+    "                \n",
+    "                print(f\"\\n📊 Evaluating...\")\n",
+    "                test_results = evaluate_light_xml(\n",
+    "                    model=model,\n",
+    "                    test_dataloader=test_dataloader,\n",
+    "                    device=BASE_CONFIG['device'],\n",
+    "                    label_names=label_names\n",
+    "                )\n",
     "        \n",
-    "        # Train BERT\n",
-    "        training_history = train_model(\n",
-    "            model=bert_model,\n",
-    "            train_dataloader=train_dataloader,\n",
-    "            num_epochs=BASE_CONFIG['num_epochs'],\n",
-    "            learning_rate=BASE_CONFIG['learning_rate'],\n",
-    "            device=BASE_CONFIG['device']\n",
-    "        )\n",
-    "        \n",
-    "        # STEP 2: Train classification method on BERT embeddings\n",
-    "        print(f\"\\n🔧 Step 2/3: Training {clf_method['display_name']} on BERT embeddings...\")\n",
-    "        print(f\"   Base Estimator: {clf_method['base_estimator']}\")\n",
-    "        \n",
-    "        if clf_method['name'] == 'classifier_chain':\n",
-    "            # Train ClassifierChain\n",
-    "            clf_model = train_classifier_chain(\n",
-    "                bert_model=bert_model,\n",
-    "                train_dataloader=train_dataloader,\n",
-    "                device=BASE_CONFIG['device'],\n",
-    "                base_estimator=clf_method['base_estimator'],\n",
-    "                order='random',\n",
-    "                cv=None,\n",
-    "                random_state=42\n",
-    "            )\n",
     "        else:\n",
-    "            # Train MultiOutputClassifier (or ExtraTrees variant)\n",
-    "            clf_model = train_multi_output_classifier(\n",
-    "                bert_model=bert_model,\n",
-    "                train_dataloader=train_dataloader,\n",
+    "            # Traditional two-stage approach: BERT + Classification\n",
+    "            # STEP 1: Train BERT with specific loss function\n",
+    "            print(f\"\\n🔧 Step 1/3: Training BERT with {loss_config['display_name']}...\")\n",
+    "            bert_model = load_model(\n",
+    "                model_name=BASE_CONFIG['model_name'],\n",
+    "                num_labels=num_labels,\n",
     "                device=BASE_CONFIG['device'],\n",
-    "                base_estimator=clf_method['base_estimator'],\n",
-    "                n_jobs=-1,\n",
-    "                random_state=42\n",
+    "                use_focal_loss=loss_config['use_focal_loss'],\n",
+    "                focal_alpha=loss_config['focal_alpha'],\n",
+    "                focal_gamma=loss_config['focal_gamma'],\n",
+    "                pos_weight=loss_config['pos_weight']\n",
     "            )\n",
-    "        \n",
-    "        # STEP 3: Evaluate\n",
-    "        print(f\"\\n📊 Step 3/3: Evaluating...\")\n",
-    "        test_results = clf_method['eval_func'](\n",
-    "            model=clf_model,\n",
-    "            test_dataloader=test_dataloader,\n",
-    "            label_names=label_names\n",
-    "        )\n",
+    "            \n",
+    "            # Train BERT\n",
+    "            training_history = train_model(\n",
+    "                model=bert_model,\n",
+    "                train_dataloader=train_dataloader,\n",
+    "                num_epochs=BASE_CONFIG['num_epochs'],\n",
+    "                learning_rate=BASE_CONFIG['learning_rate'],\n",
+    "                device=BASE_CONFIG['device']\n",
+    "            )\n",
+    "            \n",
+    "            # STEP 2: Train classification method on BERT embeddings\n",
+    "            print(f\"\\n🔧 Step 2/3: Training {clf_method['display_name']} on BERT embeddings...\")\n",
+    "            print(f\"   Base Estimator: {clf_method['base_estimator']}\")\n",
+    "            \n",
+    "            if clf_method['name'] == 'classifier_chain':\n",
+    "                # Train ClassifierChain\n",
+    "                clf_model = train_classifier_chain(\n",
+    "                    bert_model=bert_model,\n",
+    "                    train_dataloader=train_dataloader,\n",
+    "                    device=BASE_CONFIG['device'],\n",
+    "                    base_estimator=clf_method['base_estimator'],\n",
+    "                    order='random',\n",
+    "                    cv=None,\n",
+    "                    random_state=42\n",
+    "                )\n",
+    "            else:\n",
+    "                # Train MultiOutputClassifier (or ExtraTrees variant)\n",
+    "                clf_model = train_multi_output_classifier(\n",
+    "                    bert_model=bert_model,\n",
+    "                    train_dataloader=train_dataloader,\n",
+    "                    device=BASE_CONFIG['device'],\n",
+    "                    base_estimator=clf_method['base_estimator'],\n",
+    "                    n_jobs=-1,\n",
+    "                    random_state=42\n",
+    "                )\n",
+    "            \n",
+    "            # STEP 3: Evaluate\n",
+    "            print(f\"\\n📊 Step 3/3: Evaluating...\")\n",
+    "            test_results = clf_method['eval_func'](\n",
+    "                model=clf_model,\n",
+    "                test_dataloader=test_dataloader,\n",
+    "                label_names=label_names\n",
+    "            )\n",
     "        \n",
     "        # Store results\n",
     "        all_test_results[strategy_name] = {\n",
     "            'config': f\"{loss_config['display_name']} + {clf_method['display_name']}\",\n",
-    "            'description': f\"BERT trained with {loss_config['display_name']}, embeddings classified with {clf_method['display_name']}\",\n",
+    "            'description': f\"{'End-to-end training' if clf_method['name'] in ['attentionxml', 'lightxml'] else 'BERT embeddings'} with {loss_config['display_name']}, classified with {clf_method['display_name']}\",\n",
     "            'results': test_results\n",
     "        }\n",
     "        \n",
