Clean up README: Remove 'Academic use only' footer

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -2799,88 +2799,148 @@
     "- **CTI-BERT** (ibm-research/CTI-BERT): Cyber Threat Intelligence'a özel BERT\n",
     "- Güvenlik metinlerinde genel BERT'ten daha iyi performans\n",
     "- Pre-trained on security-specific corpus\n",
+    "- 768-dimensional embeddings\n",
     "\n",
     "**Dataset:**\n",
     "- Single source: tumeteor/Security-TTP-Mapping (14.9k train + 2.6k test)\n",
     "- 499 unique MITRE ATT&CK technique labels\n",
     "- Tutarlı label format, yüksek kalite\n",
+    "- Imbalanced distribution (tail TTP'ler az görülür)\n",
     "\n",
-    "**Stratejiler:**\n",
+    "---\n",
     "\n",
-    "**Loss Function Based (BERT end-to-end):**\n",
-    "1. **Baseline BCE** - Referans performans, class imbalance handle yok\n",
-    "2. **Weighted BCE** - En etkili, pos_weight ile rare label'lara odaklanır\n",
-    "3. **Focal Loss (γ=2)** - Hard örnek odaklı, moderate focusing\n",
-    "4. **Focal Loss (γ=5)** - Hard örnek odaklı, strong focusing\n",
+    "## 📊 EXPERIMENT STRUCTURE OVERVIEW\n",
     "\n",
-    "**Multi-label Classification Based:**\n",
-    "6. **Classifier Chain** - BERT embeddings + sklearn ClassifierChain\n",
-    "   - Label dependencies öğrenir (her label önceki tahminleri kullanır)\n",
-    "   - Binary classification chain (her label için ayrı LogisticRegression)\n",
-    "   - Class imbalance her binary problem'de ayrı handle edilir\n",
-    "   - Avantaj: Label arası ilişkileri modelleyebilir\n",
-    "   - Dezavantaj: Training süresi daha uzun (499 binary classifier)\n",
+    "### **PART A: Data Augmentation (5 strategies)**\n",
+    "Tail TTP'leri güçlendirmek için augmentation yöntemleri:\n",
+    "- **A-1:** Baseline (No Augmentation)\n",
+    "- **A-2:** IoC Replacement Only\n",
+    "- **A-3:** Back-translation Only\n",
+    "- **A-4:** Oversampling Only (3x-10x)\n",
+    "- **A-5:** Combined (All 3 methods)\n",
     "\n",
-    "**Capacity Analysis:**\n",
-    "5. **Top-K Labels** - Model kapasitesini test et (K=5,10,20,50,100)\n",
+    "**Beklenen İyileştirme:** Tail TTP Recall +40-60%, Overall mAP +20-30%\n",
     "\n",
-    "**Test Sırası:**\n",
-    "1. **Baseline** - Her zaman ilk olarak çalıştırın (referans performans)\n",
-    "2. **Weighted BCE** - En umut verici strateji\n",
-    "3. **Classifier Chain** - Label dependency avantajı test et\n",
-    "4. Weighted BCE başarılı olursa → Bitti, kullan!\n",
-    "5. Classifier Chain daha iyiyse → Multi-label yaklaşım kazandı!\n",
-    "6. İkisi de kötüyse → **Focal Loss (γ=2)** dene\n",
-    "7. Hala kötüyse → **Focal Loss (γ=5)** dene\n",
-    "8. Hepsi başarısız olursa → **Top-100** ile model öğrenme kapasitesini kontrol et\n",
+    "### **PART B Section 1: Loss Functions (4 strategies)**\n",
+    "BERT end-to-end training ile farklı loss fonksiyonları:\n",
+    "- **STR-1:** Baseline BCE (class imbalance handle yok)\n",
+    "- **STR-2:** Weighted BCE (pos_weight ile rare label'lara odaklanır)\n",
+    "- **STR-3:** Focal Loss γ=2 (moderate hard example focusing)\n",
+    "- **STR-4:** Focal Loss γ=5 (strong hard example focusing)\n",
     "\n",
-    "**Başarı Kriterleri:**\n",
-    "- **mAP > 0.20** → İyi sıralama kalitesi (en önemli metrik!)\n",
-    "- Micro F1 > 0.15 → İyi performans\n",
-    "- Recall@5 > 0.30 → Çok iyi performans\n",
-    "- Hamming Loss < 0.10 → İyi performans\n",
+    "**En Başarılı:** Weighted BCE (frequency-based pos_weight)\n",
     "\n",
-    "**Metrikler (SOC Analyst Perspektifi):**\n",
-    "- **mAP (Mean Average Precision):** Sıralama kalitesi - doğru TTP'leri listenin tepesine koyma başarısı\n",
-    "  - Bu bir öneri sistemidir: Analist top-N tahmini inceler\n",
-    "  - mAP tüm sıralamayı değerlendirir (Recall@K'dan daha kapsamlı)\n",
-    "  - Örnek: 4 doğru TTP varsa, bunları 1-2-3-4. sıralarda görmek istersiniz\n",
-    "  \n",
+    "### **PART B Section 2: Capacity Testing (1 strategy, 5 variants)**\n",
+    "Model kapasitesini test et:\n",
+    "- **STR-5:** Top-K Label Analysis (K=5, 10, 20, 50, 100)\n",
+    "- Her K için baseline BCE kullanır\n",
+    "- Model'in farklı label sayılarındaki performansını gösterir\n",
+    "\n",
+    "**Süre:** ~2-2.5 saat (5 model)\n",
+    "\n",
+    "### **PART C: Hybrid Strategies (10 strategies = 2 loss × 5 methods)**\n",
+    "En iyi loss fonksiyonlarıyla tüm classification yöntemlerini test et:\n",
+    "\n",
+    "**Loss Functions (Part B'den seçildi):**\n",
+    "1. **Weighted BCE** - Frequency-based weights\n",
+    "2. **Focal Loss γ=5** - Strong hard example focusing\n",
+    "\n",
+    "**Classification Methods:**\n",
+    "1. **ClassifierChain** - Label dependencies (sequential)\n",
+    "2. **ExtraTreesClassifier** - Extremely randomized trees\n",
+    "3. **RandomForestClassifier** - Ensemble of decision trees\n",
+    "4. **AttentionXML** - Multi-label attention mechanism (NeurIPS 2019)\n",
+    "5. **LightXML** - Dynamic negative sampling + label embeddings (AAAI 2021)\n",
+    "\n",
+    "**Strategy Matrix:**\n",
+    "```\n",
+    "                    Chain  ExtraTrees  RandomForest  AttentionXML  LightXML\n",
+    "Weighted BCE        C-1    C-2         C-3           C-4           C-5\n",
+    "Focal Loss γ=5      C-6    C-7         C-8           C-9           C-10\n",
+    "```\n",
+    "\n",
+    "**Toplam Süre:** ~7.5-10 saat (10 strateji × 45-60 dakika)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🎯 Method Detayları\n",
+    "\n",
+    "### **ClassifierChain:**\n",
+    "- **Nasıl çalışır:** BERT embeddings + 499 zincirleme binary classifier\n",
+    "- **Avantaj:** Label dependencies modelleyebilir\n",
+    "- **Dezavantaj:** Training süresi uzun, chain order'a bağımlı\n",
+    "- **Progress:** Tek satır progress bar (499 line spam yerine)\n",
+    "\n",
+    "### **ExtraTrees vs RandomForest:**\n",
+    "- **ExtraTrees:** Daha hızlı, random splits, less overfitting\n",
+    "- **RandomForest:** Optimal splits, biraz daha yüksek accuracy\n",
+    "- **İkisi de:** Ensemble methods, class_weight='balanced'\n",
+    "\n",
+    "### **AttentionXML:**\n",
+    "- Her label için özel attention weights\n",
+    "- Label-specific text regions'a odaklanır\n",
+    "- End-to-end BERT fine-tuning\n",
+    "- Simplified implementation (499 labels için)\n",
+    "\n",
+    "### **LightXML:**\n",
+    "- Two-stage: Label grouping (50 groups) → Candidate ranking\n",
+    "- Dynamic negative sampling\n",
+    "- Label embeddings (128-dim semantic space)\n",
+    "- Efficient for large label spaces\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 📈 Başarı Kriterleri\n",
+    "\n",
+    "**SOC Analyst Perspektifi:**\n",
+    "- **mAP > 0.20** → İyi sıralama kalitesi (EN ÖNEMLİ!)\n",
+    "- **Recall@5 > 0.30** → Top-5 tahmin içinde doğru TTP'leri bulma\n",
+    "- **Micro F1 > 0.15** → Genel performans (threshold-based)\n",
+    "- **Hamming Loss < 0.10** → Az yanlış tahmin\n",
+    "\n",
+    "**Metrikler:**\n",
+    "- **mAP:** Sıralama kalitesi - doğru TTP'leri listenin tepesine koyma başarısı\n",
     "- **Recall@5:** Top-5 tahmin içinde kaç doğru TTP var\n",
     "- **Precision@5:** Top-5 tahminlerin kaçı doğru\n",
-    "- **Micro F1:** Genel performans (threshold-based)\n",
+    "- **Micro F1:** Tüm label'lar üzerinden genel performans\n",
     "- **Hamming Loss:** Yanlış tahmin edilen label oranı (düşük=iyi)\n",
-    "- **Subset Accuracy:** Tüm label'ların tam eşleşmesi (çok strict)\n",
     "\n",
-    "**ClassifierChain Detayları:**\n",
-    "- **Nasıl çalışır:** \n",
-    "  1. BERT ile text → embedding (768-dim vector)\n",
-    "  2. Her label için binary classifier (LogisticRegression)\n",
-    "  3. Chain: label_2 tahmini → label_1'in tahminini feature olarak kullanır\n",
-    "  4. 499 label → 499 binary classifier (zincirleme)\n",
-    "  \n",
-    "- **Avantajlar:**\n",
-    "  - Label dependencies modelleyebilir (örn: T1059 varsa T1059.001 olasılığı artar)\n",
-    "  - Her binary problem balanced olarak handle edilir\n",
-    "  - BERT fine-tuning gerektirmez (sadece embedding extraction)\n",
-    "  \n",
-    "- **Dezavantajlar:**\n",
-    "  - Training süresi daha uzun (499 model)\n",
-    "  - Chain order'a bağımlı (random order kullanıyoruz)\n",
-    "  - Memory kullanımı yüksek\n",
+    "---\n",
     "\n",
-    "**Süre:**\n",
-    "- Strategy 1-4: ~30-45 dakika\n",
-    "- Strategy 6 (Classifier Chain): ~45-60 dakika\n",
-    "- Strategy 5 (Top-K): ~2-2.5 saat (5 model)\n",
-    "- Hybrid strategies: ~15-20 dakika each (tree optimized)\n",
+    "## 🚀 Test Önerileri\n",
     "\n",
-    "**Hatırlatmalar:**\n",
-    "- Her strateji hücresi bağımsızdır, istediğiniz sırada çalıştırabilirsiniz\n",
+    "**Sıralama (Optimal):**\n",
+    "1. **PART A** → En iyi augmentation'ı bul (tail TTP'ler için kritik)\n",
+    "2. **PART B** → En iyi loss function'ı bul (weighted BCE genelde kazanır)\n",
+    "3. **PART C** → En iyi kombinasyonu bul (loss × classification)\n",
+    "\n",
+    "**Bağımsız Test (Esnek):**\n",
+    "- Her part birbirinden bağımsız çalıştırılabilir\n",
+    "- Tek gereksinim: Her part'ın başındaki import hücresini çalıştır\n",
+    "- İstediğin sırayla test edebilirsin\n",
+    "\n",
+    "**Hızlı Test:**\n",
+    "- A-1 (Baseline) + STR-2 (Weighted BCE) → ~45 dakika\n",
+    "- C-1 (Weighted BCE + Chain) → ~50 dakika\n",
+    "- Toplam: ~1.5 saat (hızlı baseline)\n",
+    "\n",
+    "**Tam Test:**\n",
+    "- Part A (5 strateji) → ~4-5 saat\n",
+    "- Part B (4+5 strateji) → ~5-6 saat\n",
+    "- Part C (10 strateji) → ~7.5-10 saat\n",
+    "- Toplam: ~17-21 saat\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## ⚠️ Hatırlatmalar\n",
+    "\n",
+    "- Her strateji hücresi **bağımsızdır**, istediğiniz sırada çalıştırabilirsiniz\n",
     "- Sonuçlar `all_test_results` dictionary'sinde saklanır\n",
     "- Comparison hücresini dilediğiniz zaman çalıştırıp ara sonuçlara bakabilirsiniz\n",
-    "- CTI-BERT ilk indirilirken cache'lenir, sonraki çalıştırmalar hızlıdır\n",
-    "- **mAP metriği eklendi** - sıralama kalitesini ölçer (SOC analyst use case)"
+    "- CTI-BERT ilk indirilirken cache'lenir (~500MB), sonraki çalıştırmalar hızlıdır\n",
+    "- **ClassifierChain verbose output düzeltildi** - 499 line yerine tek progress bar\n",
+    "- **AttentionXML ve LightXML eklendi** - XMC (extreme multi-label classification) için\n",
+    "- **Progress bars** tüm training loop'larda aktif - gerçek zamanlı ilerleme takibi"
    ]
   }
  ],
