Add training time tracking to experiments
- Add 'training_time_min' field to all_test_results
- Part C: Track time for all 10 hybrid strategies
- Comparison: Add 'Training Time (min)' column to display
- CSV export: Include 'Training_Time_min' in saved results
- Display training time after each strategy completes
- Format: 'Training Time: XX.XX minutes'

Note: Part A and Part B individual strategies need manual timing additions (template ready)

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -431,10 +431,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "\n",
     "strategy_name = \"aug_baseline\"\n",
     "print(f\"\\n{'='*60}\")\n",
     "print(f\"🧪 AUG-1: Baseline (No Augmentation)\")\n",
     "print(f\"{'='*60}\\n\")\n",
+    "\n",
+    "# Start timing\n",
+    "strategy_start_time = time.time()\n",
     "\n",
     "# Use weighted BCE (best performing strategy)\n",
     "strategy_config = get_strategy_config(\n",
@@ -480,27 +485,32 @@
     "print(\"\\n📊 Test seti değerlendiriliyor...\")\n",
     "test_results = evaluate_model(\n",
     "    model=model,\n",
-    "    test_dataset=data['test_dataset'],\n",
-    "    batch_size=BASE_CONFIG['batch_size'],\n",
-    "    device=BASE_CONFIG['device']\n",
-    ")\n",
+    "# Calculate training time\n",
+    "training_time_min = (time.time() - strategy_start_time) / 60\n",
     "\n",
     "# Store results\n",
     "all_test_results[strategy_name] = {\n",
     "    'config': 'Weighted BCE (No Augmentation)',\n",
     "    'description': 'Baseline for augmentation comparison',\n",
+    "    'training_time_min': training_time_min,\n",
     "    'results': test_results\n",
     "}\n",
     "\n",
     "# Display results\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(f\"✅ AUG-1 TAMAMLANDI: {strategy_name}\")\n",
+    "print(f\"⏱️  Training Time: {training_time_min:.2f} minutes\")\n",
     "print(\"=\"*60)\n",
+    "\n",
     "print(f\"\\n📈 Sonuçlar:\")\n",
+    "print(f\"\\n📈 Sonuçlar:\")print(\"\\n\")\n",
+    "\n",
     "for metric, value in test_results.items():\n",
+    "for metric, value in test_results.items():print(\"\\n\")\n",
+    "\n",
     "    if isinstance(value, (int, float)):\n",
-    "        print(f\"   {metric}: {value:.4f}\")\n",
-    "print(\"\\n\")"
+    "    if isinstance(value, (int, float)):        print(f\"   {metric}: {value:.4f}\")\n",
+    "        print(f\"   {metric}: {value:.4f}\")"
    ]
   },
   {
@@ -2347,6 +2357,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "\n",
     "print(f\"\\n{'='*80}\")\n",
     "print(f\"🔄 HYBRID STRATEGIES: LOSS FUNCTIONS × CLASSIFICATION METHODS\")\n",
     "print(f\"{'='*80}\\n\")\n",
@@ -2440,6 +2452,9 @@
     "        print(f\"\\n{'='*80}\")\n",
     "        print(f\"🧪 PART C STRATEGY {strategy_counter}: {loss_config['display_name']} + {clf_method['display_name']}\")\n",
     "        print(f\"{'='*80}\\n\")\n",
+    "        \n",
+    "        # Start timing\n",
+    "        strategy_start_time = time.time()\n",
     "        \n",
     "        # STEP 1: Configuration\n",
     "        print(f\"📋 Configuration:\")\n",
@@ -2579,16 +2594,21 @@
     "                label_names=label_names\n",
     "            )\n",
     "        \n",
+    "        # Calculate training time\n",
+    "        training_time_min = (time.time() - strategy_start_time) / 60\n",
+    "        \n",
     "        # Store results\n",
     "        all_test_results[strategy_name] = {\n",
     "            'config': f\"{loss_config['display_name']} + {clf_method['display_name']}\",\n",
     "            'description': f\"{'End-to-end training' if clf_method['name'] in ['attentionxml', 'lightxml'] else 'BERT embeddings'} with {loss_config['display_name']}, classified with {clf_method['display_name']}\",\n",
+    "            'training_time_min': training_time_min,\n",
     "            'results': test_results\n",
     "        }\n",
     "        \n",
     "        # Display results\n",
     "        print(f\"\\n{'='*80}\")\n",
     "        print(f\"✅ PART C STRATEGY {strategy_counter} TAMAMLANDI: {strategy_name}\")\n",
+    "        print(f\"⏱️  Training Time: {training_time_min:.2f} minutes\")\n",
     "        print(f\"{'='*80}\")\n",
     "        print(f\"\\n📈 Results:\")\n",
     "        for metric, value in test_results.items():\n",
@@ -2638,6 +2658,7 @@
     "        results = data['results']\n",
     "        comparison_data.append({\n",
     "            'Strategy': strategy_name,\n",
+    "            'Training Time (min)': data.get('training_time_min', 0),\n",
     "            'Micro F1': results.get('micro_f1', 0),\n",
     "            'mAP': results.get('mean_average_precision', 0),\n",
     "            'Recall@5': results.get('recall_at_5', 0),\n",
@@ -2760,6 +2781,7 @@
     "        results = data['results']\n",
     "        comparison_data.append({\n",
     "            'Strategy': strategy_name,\n",
+    "            'Training_Time_min': data.get('training_time_min', 0),\n",
     "            'mAP': results.get('mean_average_precision', 0),\n",
     "            'Micro_F1': results.get('micro_f1', 0),\n",
     "            'Recall_at_5': results.get('recall_at_5', 0),\n",
