Fix indentation error in AUG-3 back-translation results display

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -903,13 +903,14 @@
     "    model=model,\n",
     "    test_dataset=data['test_dataset'],\n",
     "    batch_size=BASE_CONFIG['batch_size'],\n",
-    "    device=BASE_CONFIG['device']\n",
+    "    device=BASE_CONFIG['device'],\n",
+    "    label_names=label_names\n",
     ")\n",
     "\n",
-    "# Store results\n",
     "# Calculate training time\n",
     "training_time_min = (time.time() - strategy_start_time) / 60\n",
     "\n",
+    "# Store results\n",
     "all_test_results[strategy_name] = {\n",
     "    'config': 'Weighted BCE + Back-translation (30% tail)',\n",
     "    'description': 'Training data augmented with back-translation for tail TTPs',\n",
@@ -920,12 +921,12 @@
     "# Display results\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(f\"✅ AUG-3 TAMAMLANDI: {strategy_name}\")\n",
-    "print(\"=\"*60)\n",
     "print(f\"⏱️  Training Time: {training_time_min:.2f} minutes\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
     "print(f\"\\n📈 Sonuçlar:\")\n",
     "for metric, value in test_results.items():\n",
-    "\n",
-    "    if isinstance(value, (int, float)):print(\"\\n\")\n",
+    "    if isinstance(value, (int, float)):\n",
     "        print(f\"   {metric}: {value:.4f}\")"
    ]
   },
